[AutoDiff] [Sema] Limit implicit `@differentiable` attribute creation.

During protocol witness matching for a protocol requirement with
`@differentiable` attributes, implicit `@differentiable` attributes may be
created for the witness under specific conditions (when the witness has a
`@differentiable` attribute with superset differentiability parameters, or
when the witness has less-than-public visibility).

Do not generate implicit `@differentiable` attributes for protocol witnesses
when the protocol conformance is declared from a separate file from the witness.

Otherwise, compilation of the file containing the conformance creates references
to external symbols for the implicit `@differentiable` attributes, even though
no such symbols exist.

Resolves SR-13455.